# mlbb-bot-server

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml
agent/: base.py  claude.py
bot/: handlers.py  main.py  skills.py
docs/plans/: 2026-03-07-telegram-bot-server-design.md  2026-03-07-telegram-bot-server-implementation.md  2026-03-09-suggest-heroes-conversation-design.md  2026-03-09-suggest-heroes-implementation.md  2026-03-10-generating-suggestions-message-design.md  2026-03-10-generating-suggestions-message-implementation.md  2026-03-10-suggest-heroes-response-format-design.md
skills/: suggest_counters.md
skills/suggest-counters/: SKILL.md
skills/suggest-heroes/: SKILL.md
skills/team-counter/: SKILL.md
tests/: test_agent_base.py  test_agent_claude.py  test_config.py  test_handlers.py  test_main.py  test_skills.py
